[Improvement] (inde.html): Set nativeEmoji: false, subMaxLevel: 2.

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
         loadSidebar: true,
 		search: 'auto',
         autoHeader: true,
+		nativeEmoji: false,
+        subMaxLevel: 2,
 		basePath: 'https://docs.mobilegl.top/',
-        subMaxLevel: 3,
         search: {
             placeholder: 'Search',
             noData: 'Not Found'
