--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@
 		nativeEmoji: false,
         subMaxLevel: 2,
 		basePath: 'https://docs.mobilegl.top/',
+		loadFooter: true,
+		loadFooter: '_footer.md',
         search: {
             placeholder: 'Search',
             noData: 'Not Found'
         }
     }
 </script>
-
     <script src="https://cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/prismjs/components/prism-bash.min.js"></script>
@@ -32,5 +33,7 @@
     <script src="https://cdn.jsdelivr.net/npm/prismjs/components/prism-c.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/prismjs/components/prism-cpp.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/docsify-count/dist/countable.min.js"></script>
+	<script src="//cdn.jsdelivr.net/npm/docsify-copy-code/dist/docsify-copy-code.min.js"></script>
+	<script src="//cdn.jsdelivr.net/npm/@alertbox/docsify-footer/dist/docsify-footer.min.js"></script>
 </body>
 </html>
